<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory
            android:title="@string/preferences_area_title">

        <com.jd.living.screen.settings.pickers.AreaAutoCompletePickerPreference
                android:key="preferences_area_location"
                android:title="@string/preferences_area"
                android:defaultValue="Centrum Malmö" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preferences_amount">

        <com.jd.living.screen.settings.pickers.AmountAutoCompletePickerPreference
                android:key="preference_amount_min"
                android:title="@string/preferences_amount_min"
                android:defaultValue="" />

        <com.jd.living.screen.settings.pickers.AmountAutoCompletePickerPreference
                android:key="preferences_max_amount"
                android:title="@string/preferences_amount_max"
                android:defaultValue="" />

        <com.jd.living.screen.settings.pickers.NumberPickerPreference
                android:key="preferences_max_rent"
                android:title="@string/preferences_rent_max"
                android:defaultValue="6" />

    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preferences_nbr_of_rooms">

        <ListPreference
                android:key="preference_min_numbers"
                android:title="@string/preferences_nbr_of_rooms_min"
                android:entries="@array/rooms_number"
                android:defaultValue="3"
                android:entryValues="@array/rooms_number"/>
        <ListPreference
                android:key="preference_max_numbers"
                android:title="@string/preferences_nbr_of_rooms_max"
                android:entries="@array/rooms"
                android:defaultValue="4"
                android:entryValues="@array/rooms_number" />
    </PreferenceCategory>

    <PreferenceCategory
            android:title="@string/preferences_type_of_building_title">

        <MultiSelectListPreference
                android:key="preference_type_of_building"
                android:title="@string/preferences_type_of_building"
                android:entries="@array/building"
                android:defaultValue="@array/building_types"
                android:entryValues="@array/building_types" />

        <ListPreference
                android:title="@string/preferences_type_of_production"
                android:key="preference_build_type"
                android:entryValues="@array/build_types"
                android:entries="@array/build_types_strings"
                android:defaultValue="0" />

        <ListPreference
                android:title="@string/preferences_type_of_object"
                android:key="preference_object_type"
                android:entryValues="@array/build_object"
                android:entries="@array/build_object_strings"
                android:defaultValue="0" />
    </PreferenceCategory>

</PreferenceScreen>